Finished up bootstrap site, functioning responsisly. TODO: fix the Nav button and have it collapse correctly when site is changed to smaller screen format, ran out of time to do that.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,15 @@
 
 body {
   background: url(../photos/sun-pattern.png);
-  /* padding-top: 60px; */
 }
 
 .header {
   border-bottom: solid;
   border-color: #cccccc;
-  /* max-height: 75px; */
 }
 
 .contentBox {
   max-width: 960px;
-  /* background: grey; */
-  /* padding-top: 60px; */
 }
 
 .nameBox {
@@ -23,16 +19,8 @@ body {
   color: #FFFFFF;
 }
 
-h2 {
-  /* padding: 12px 0 0 12px; */
-}
-
 h3 {
   color: #4aaaa5;
-}
-
-.navBox {
-  float: right;
 }
 
 img {
@@ -42,6 +30,19 @@ img {
 
 .navbar {
   height: 75px;
+}
+
+
+.thumbnail {
+    position: relative;
+}
+
+.caption {
+    position: absolute;
+    top: 70%;
+    left: 0;
+    width: 100%;
+    background-color: #4aaaa5;
 }
 
 /* color of the footer and border below */
